# BlackWire

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt  to_implement.md
assets/projects/: LogoBlackWire.psd  icons.psd
core/: server_checker.py  ssh_client.py  storage.py
scripts/: build.py  install.sh  setup_linux.sh  setup_windows.bat
src/core/: SSHLoginWidget.cpp  SSHLoginWidget.h
src/resources/: resources.qrc
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
ui/: main_window.py
ui/pages/: dashboard.py  dashboard_page.py  home.py  home_page.py  logs_page.py  settings_page.py
ui/services/: service_config_store.py
ui/widgets/: add_server_widget.py  circular_gauge_widget.py  cpu_temp_widget.py  helper.py  icon_picker.py  network_widget.py  server_card.py  server_card_widget.py  service_card_widget.py  service_dialog.py  toast_notification_widget.py
